--- a/Papers/WUT-Master-Thesis/tex/4-implementacja.tex
+++ b/Papers/WUT-Master-Thesis/tex/4-implementacja.tex
@@ -188,7 +188,8 @@ Rysunek \ref{implementation:data_structures:uml_diagram} przedstawia diagram UML
 \subsubsection{Referencje do obiektów C++}
 \label{implementation:interpreter:cpp_object_references}
 
-Umożliwienie C-=-1 modyfikacji modelu semantycznego programu, wymaga udostępnienie referencji %todo: finish
+Umożliwienie C-=-1 modyfikacji modelu semantycznego programu, wymaga udostępnienie referencji do natywnych obiektów języka implementacji kompilatora. %todo: jesus fucking christ, wording
+%todo: finish
 
 \subsubsection{Biblioteka podstawowa}
 \label{implementation:interpreter:basic_library}
