--- a/Papers/WUT-Master-Thesis/tex/4-implementacja.tex
+++ b/Papers/WUT-Master-Thesis/tex/4-implementacja.tex
@@ -172,6 +172,9 @@ W kontekście działania interpretera C-=-1 przypomina bardziej dynamicznie typo
 Interpreter działa na generycznych strukturach danych, typowych dla języka interpretowanego.
 Rysunek \ref{implementation:data_structures:uml_diagram} przedstawia diagram UML klas używanych przez ten moduł.
 
+\lstinline{ObjectValue}, \lstinline{IntegerValue}, \lstinline{StringValue} oraz \lstinline{ReferenceValue} odpowiadają typowym konstrukcjom występującym w językach obiektowych: obiektowi, liczbie całkowitej, napisowi oraz wskazaniu.
+Natomiast \lstinline{GenericRuntimeWrapper} stanowi referencję do natywnego obiektu C++ i jest opisany w rozdziale \ref{implementation:interpreter:cpp_object_references}.
+
 
 \begin{figure}
   \caption{Diagram UML struktur danych interpretera C-=-1}
@@ -305,7 +308,7 @@ Jego celem było zademonstrowanie możliwości języka C-=-1.
 \subsection{Backend}
 \label{implementation:backend}
 Do generowania kodu maszynowego została wykorzystana biblioteka LLVM \cite{Lattner:MSThesis02}.
-Ten pakiet jest obecnie używany jako backend całej rodziny języków C (C, C++, Objective-C) oraz języka Rust.
+Ten pakiet jest obecnie używany jako \emph{backend} całej rodziny języków C (C, C++, Objective-C) oraz języka Rust.
 Aby wspierać tak szeroki zakres języków źródłowych, LLVM definiuje własną reprezentację pośrednią kodu: LLVMIR.
 
 LLVMIR jest formą asemblera dla abstrakcyjnej maszyny stosowej \cite{llvmir}.
