--- a/Papers/WUT-Master-Thesis/tex/8-dalsza.tex
+++ b/Papers/WUT-Master-Thesis/tex/8-dalsza.tex
@@ -62,8 +62,7 @@ Większość potrzebnych prac została już wykonana.
 Model semantyczny programu jest trzymany w strukturach danych, które można modyfikować z interpretowanego kodu.
 Proces kompilacji został zaprojektowany z uwzględnieniem zmian w reprezentacji pośredniej.
 
-% todo: explain basic library
-Aby skutecznie skorzystać z tej możliwości, należy jeszcze rozszerzyć bibliotekę podstawową języka.
+Aby skutecznie skorzystać z tej możliwości, należy jeszcze rozszerzyć bibliotekę podstawową języka (rozdział \ref{implementation:interpreter:basic_library}).
 Obecnie programista może zamieniać albo usuwać istniejące elementy modelu semantycznego.
 Aby umożliwić użytkownikom pełne wykorzystanie potencjału C-=-1, do biblioteki podstawowej należy dodać możliwość dynamicznego tworzenia elementów modelu.
 W przyszłosci, do języka trzeba będzie dodać funkcje do tworzenia nowych funkcji, instrukcji oraz wyrażeń.
@@ -81,7 +80,7 @@ Ewaluacja wyrażeń, zawierających taki kod, w czasie kompilacji, prowadziłaby
 W czasie kompilacji, dochodziłoby do zbędnych operacji na plikach, bądź nawet błędów kompilacji.
 Natomiast w czasie uruchomienia, program pomijałby pewne operacje, operując na przykład na plikach dostępnych w czasie kompilowania.
 
-Aby poprawnie zrealizować tą funkcjonalność, koniecznym jest wprowadzenie do języka wyróżnienia funkcji które wpływają na, bądź zależą od globalnego stanu.
+Aby poprawnie zrealizować tę funkcjonalność, koniecznym jest wprowadzenie do języka wyróżnienia funkcji które wpływają na, bądź zależą od globalnego stanu.
 W tym celu można zastosować koncepcję 'czystej' funkcji z funkcyjnych języków programowania \cite{McLoughlin1989ImperativeEF}.
 Dzięki temu, kompilator będzie w stanie ustalić, które wyrażenia może ewaluować jako część optymalizacji a które muszą pozostać w skompilowanym programie.
 
