--- a/Papers/WUT-Master-Thesis/tex/4-implementacja.tex
+++ b/Papers/WUT-Master-Thesis/tex/4-implementacja.tex
@@ -146,6 +146,10 @@ Główne różnice w strukturze między C-=-1 a CIR polegają na bardziej dosło
 
 \subsubsection{Szablony}
 \label{implementation:generics}
+Szablony stanowią nietypowy element modelu semantycznego.
+W kontekście projektu języka stanowią one źródło ciekawych wyzwań, opisanych w rozdziałach \ref{challenges:generic_instance_placement} oraz \ref{challenges:generic_function_limitations}.
+W C-=-1 szablony działają na zasadach analogicznych do C++.
+Szablon funkcji, na przykład, nie jest funkcją, a wzorcem, według którego procedura może dopiero powstać po pełnej specjalizacji.
 
 
 
