--- a/Papers/WUT-Master-Thesis/tex/6-wyzwania.tex
+++ b/Papers/WUT-Master-Thesis/tex/6-wyzwania.tex
@@ -4,6 +4,7 @@ W związku z nietypowym podejściem do problemu, zarówno projekt, jak i impleme
 W szczególności są one powiązane z możliwością wykonywania różnego kodu w zależności od kontekstu uruchomienia oraz publiczną naturą reprezentacji pośredniej.
 
 \subsection{Instancje generyków jako element modelu semantycznego}
+\label{challenges:generic_instance_placement}
 Jednym z wyzwań powiązanych z publicznością reprezentacji pośredniej, jest lokalizacja instancji generyków w modelu semantycznym.
 Instancja szablonu może zależeć od typów lub funkcji pochodzących z pakietów, które nie były dostępne w czasie kompilacji generyka.
 
@@ -47,6 +48,8 @@ Dla każdego pakietu zawierającego generyki generowany jest nowy pakiet, przech
 Ta nowa biblioteka, zależy od biblioteki deklarującej szablon oraz wszystkich pakietów, od których zależy instancja.
 W ten sposób skonstruowany model semantyczny jest spójny i jasny dla programisty.
 
+%todo: consistency formal proof?
+
 \begin{figure}
 	\caption{Diagram przykładowej relacji pomiędzy pakietami zawierającymi typ generyczny}
 	\label{generic_packages_dependencies}
@@ -75,7 +78,7 @@ W ten sposób skonstruowany model semantyczny jest spójny i jasny dla programis
 O tym, czemu atrybuty są przetwarzane przed kodem i nie mogą używać funkcji z biblioteki, w której zostały zdefiniowane.
 
 \subsection{Funkcje generyczne z ograniczeniami}
-
+\label{challenges:generic_function_limitations}
 Funkcje mogą być wykluczane z użycia w trakcie uruchomienia lub kompilacji. Jeśli generyk takiej funkcji zostanie stworzony z typem dalej ograniczającym wykonywalność tej funkcji, ona może być wykonywalna nigdy.
 
 Na wczesnych etapach implementacji, instancje takich generyków były szczególnie problematyczne, ze względu na to jak rozwiązywanie przeciążeń jest zaimplementowane w C-=-1 (rozdział \ref{Function_overload_resolution}).
@@ -90,12 +93,12 @@ Szczegóły zostały opisane w rozdziale \ref{operator_new}.
 Sygnatury tych operatorów niczym się nie różnią.
 Język rozpoznaje je jako oddzielne, rozróżnialne byty wyłącznie dlatego, że atrybuty którymi został adnotowane zmieniają ich dostępność w czasie kompilacji i uruchomienia.
 
-Na wczesnych etapach implementacji, instancje funkcji generycznych były tworzone, przy założeniu że ich kod będzie poprawny semantycznie.
+Na wczesnych etapach implementacji, instancje funkcji generycznych były tworzone, przy założeniu, że ich kod będzie poprawny semantycznie.
 Takie samo założenie obowiązuje przy tworzeniu zwykłych funkcji, ponieważ ze względu na ograniczenia czasowe, raportowanie o błędach kompilacji nie jest częścią pracy.
-Kompilator najpierw kompletował reprezentacje pośrednią instancji wszystkich wersji generyków pasujących do danego użycia.
-Przy próbie dynamicznej alokacji typu który nie mógł istnieć w czasie uruchomienia, takiego jak deskryptor funkcji, prowadziło to do odrzucenia poprawnego programu.
+Kompilator najpierw kompletował reprezentację pośrednią instancji wszystkich wersji generyków pasujących do danego użycia.
+Przy próbie dynamicznej alokacji typu, który nie mógł istnieć w czasie uruchomienia, takiego jak deskryptor funkcji, prowadziło to do odrzucenia poprawnego programu.
 
-Naprawa tego problemu, wymagała weryfikacji czy dana funkcja jest wykonywalna, w jakimkolwiek kontekście, po wykonaniu kodu powiązanych atrybutów.
+Naprawa tego problemu wymagała weryfikacji czy dana funkcja jest wykonywalna, w jakimkolwiek kontekście, po wykonaniu kodu powiązanych atrybutów.
 Alternatywnym podejściem jest ignorowanie traktowanie błędów w instancji generyka, jako sygnał do odrzucenia tej specjalizacji, tak jak zostało to rozwiązane w C++ \cite{cppTemplatesCompleteGuide}.
 Takie rozwiązanie mogłoby jednak prowadzić do zaśmiecania modelu semantycznego funkcjami, które nie mogą zostać użyte w żadnym kontekście i nie zawierały akurat żadnych błędów.
 %todo: formalize?
@@ -107,7 +110,7 @@ Operator \lstinline{new} w C-=-1, tak jak w C++ służy do dynamicznej alokacji 
 \label{Function_overload_resolution}
 To czy funkcja jest wykonywalna w czasie kompilacji albo uruchomienia można ustalić bardzo późno w trakcie budowy modelu semantycznego.
 
-Na pytanie "czy ta funkcja może być użyta w tym kontekście", kompilator jest w stanie odpowiedzieć dopiero kiedy wykonanły się na niej funkcje \lstinline{attach} wszystkich powiązanych z nią atrybutów.
+Na pytanie 'czy ta funkcja może być użyta w tym kontekście', kompilator jest w stanie odpowiedzieć dopiero kiedy wykonanły się na niej funkcje \lstinline{attach} wszystkich powiązanych z nią atrybutów.
 
 %todo: example?
 
@@ -116,6 +119,7 @@ Na pytanie "czy ta funkcja może być użyta w tym kontekście", kompilator jest
 Wyrażenie literałowe przedstawia stałą wartość.
 Na przykład w języku C++ \lstinline{int a = 4;} deklaruje i inicjalizuje zmienną a literałem 4.
 Wyrażenia lietrałowe mogą reprezentować stałe różnych typów wbudowanych.
+%todo: nameof, typeof
 
 \subsection{Integracja z back-endem}
 \label{backend_integration}
