--- a/Papers/WUT-Master-Thesis/tex/8-dalsza.tex
+++ b/Papers/WUT-Master-Thesis/tex/8-dalsza.tex
@@ -65,28 +65,28 @@ Proces kompilacji został zaprojektowany z uwzględnieniem zmian w reprezentacji
 Aby skutecznie skorzystać z tej możliwości, należy jeszcze rozszerzyć bibliotekę podstawową języka (rozdział \ref{implementation:interpreter:basic_library}).
 Obecnie programista może zamieniać albo usuwać istniejące elementy modelu semantycznego.
 Aby umożliwić użytkownikom pełne wykorzystanie potencjału C-=-1, do biblioteki podstawowej należy dodać możliwość dynamicznego tworzenia elementów modelu.
-W przyszłosci, do języka trzeba będzie dodać funkcje do tworzenia nowych funkcji, instrukcji oraz wyrażeń.
+W przyszłości, do języka trzeba będzie dodać funkcje do tworzenia nowych funkcji, instrukcji oraz wyrażeń.
 
 \subsection{Ewaluacja stałych wyrażeń w trakcie kompilacji}
 \label{compile_time_constant_evaluation}
-Jednym z celów C-=-1 było umożliwienie ewaluacji dowolnie złożonego wyrażenia do stałej oraz wykonywania obliczeń i generowania dodaktowych plików w trakcie kompilacji.
-Z tego powodu, większość funkcji można wykonać zarówno w czasie kompilacji jak i uruchomienia.
+Jednym z celów C-=-1 było umożliwienie ewaluacji dowolnie złożonego wyrażenia do stałej oraz wykonywania obliczeń i generowania dodatkowych plików w trakcie kompilacji.
+Z tego powodu, większość funkcji można wykonać zarówno w czasie kompilacji, jak i uruchomienia.
 
 Wśród nich są też procedury, mające efekty uboczne, na przykład interakcja z systemem plików czy nawet modyfikacja zmiennej globalnej.
 Programista musi wiedzieć w którym etapie życia programu, kompilacji czy uruchomienia, te funkcje zostaną wykonane.
 Jednak Z punktu widzenia modelu semantycznego one w żaden sposób się nie wyróżniają.
 
-Ewaluacja wyrażeń, zawierających taki kod, w czasie kompilacji, prowadziłaby do błednego zachowania programu.
-W czasie kompilacji, dochodziłoby do zbędnych operacji na plikach, bądź nawet błędów kompilacji.
+Ewaluacja wyrażeń, zawierających taki kod, w czasie kompilacji, prowadziłaby do błędnego zachowania programu.
+W czasie kompilacji dochodziłoby do zbędnych operacji na plikach, bądź nawet błędów kompilacji.
 Natomiast w czasie uruchomienia, program pomijałby pewne operacje, operując na przykład na plikach dostępnych w czasie kompilowania.
 
-Aby poprawnie zrealizować tę funkcjonalność, koniecznym jest wprowadzenie do języka wyróżnienia funkcji które wpływają na, bądź zależą od globalnego stanu.
+Aby poprawnie zrealizować tę funkcjonalność, koniecznym jest wprowadzenie do języka wyróżnienia funkcji, które wpływają na, bądź zależą od globalnego stanu.
 W tym celu można zastosować koncepcję 'czystej' funkcji z funkcyjnych języków programowania \cite{McLoughlin1989ImperativeEF}.
 Dzięki temu, kompilator będzie w stanie ustalić, które wyrażenia może ewaluować jako część optymalizacji a które muszą pozostać w skompilowanym programie.
 
-Takie rozwiązanie omija problem powstaly z wprowadzeniem słowa kluczowego \lstinline{constexpr} w C++\cite{Klimiankou:contexpr_great_good_wrong_idea}.
+Takie rozwiązanie omija problem powstały z wprowadzeniem słowa kluczowego \lstinline{constexpr} w C++\cite{Klimiankou:contexpr_great_good_wrong_idea}.
 Czystość funkcji niesie za sobą dużo więcej konsekwencji niż to że funkcja może być częścią procesu optymalizacji.
-Oznacza to że programista nie musi być świadomy transformacji które wykonuje kompilator.
+Oznacza to że programista nie musi być świadomy transformacji, które wykonuje kompilator.
 
 \subsection{Integracja ze środowiskiem programistycznym}
 \label{IDE_integration}
