--- a/Papers/WUT-Master-Thesis/bibliografia.bib
+++ b/Papers/WUT-Master-Thesis/bibliografia.bib
@@ -248,7 +248,24 @@ keywords = {Coq, LLVM, memory safety},
 location = {Philadelphia, PA, USA},
 series = {POPL '12}
 }
+ @misc{structured_exception_handling:microsoft, title={Structured exception handling (C/C++)}, url={https://docs.microsoft.com/en-us/cpp/cpp/structured-exception-handling-c-cpp?view=msvc-170#:~:text=Structured%20exception%20handling%20(SEH)%20is,code%20more%20portable%20and%20flexible.}, journal={Microsoft Docs}, publisher={Microsoft}, author={Corob-Msft}} 
 
+@inproceedings{structured_exception_handling,
+author = {Goodenough, John B.},
+title = {Structured Exception Handling},
+year = {1975},
+isbn = {9781450373517},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/512976.512997},
+doi = {10.1145/512976.512997},
+abstract = {In this paper, we define what exception conditions are, discuss the requirements exception handling language features must satisfy, survey and analyze existing approaches to exception handling, and propose some new language features for dealing with exceptions in an orderly and reliable way. Our objective is not solely to put forward a language proposal. It is also to analyze exception handling issues and principles in detail. The proposed language features serve to highlight exception handling issues by showing how deficiencies in current approaches could be remedied in a coherent and orderly way.},
+booktitle = {Proceedings of the 2nd ACM SIGACT-SIGPLAN Symposium on Principles of Programming Languages},
+pages = {204–224},
+numpages = {21},
+location = {Palo Alto, California},
+series = {POPL '75}
+}
 
 @techreport{ISO:cpp20,
 type = {Standard},
